# gattlibpp

./: .gitignore  CMakeLists.txt  README.md
examples/ble_scan/: CMakeLists.txt  ble_scan.cpp
examples/read_write/: CMakeLists.txt  read_write.cpp
gattlibpp/: BLECentral.cpp  CMakeLists.txt  Characteristics.cpp  DeviceDetails.cpp  Services.cpp  gattlibpp.pc.in
include/: Gattlibpp.h
include/gattlibpp/: BLECentral.h  BLECentralConfig.h  BLECentralDebug.h  DeviceDetails.h  GattlibppExtInc.h  GattlibppPlatform.h  GattlibppTypes.h
